Fix spacing between items in the list on add another on mobiles

--- a/assets/scss/look-and-feel/add-another.scss
+++ b/assets/scss/look-and-feel/add-another.scss
@@ -11,8 +11,16 @@
 
 .add-another-list-item {
   @extend .cya-answer;
+
+  padding-top: em(12, 19);
+  padding-right: 7em;
+  @include media(desktop) {
+    padding-right: 0;
+  }
 }
 
 .add-another-list-controls {
   @extend .cya-change;
+  padding-top: em(12, 19);
+  min-width: 6.5em;
 }
